--- a/index.html
+++ b/index.html
@@ -4,11 +4,33 @@
         <title>CSCE 190: Brij Patel</title>
         <link rel="stylesheet" href="styles.css" />
     </head>
-    <body>
-        <h1>Brij Patel</h1>
-        <div class="about"><h2>About me</h2></div>
-        <div class="skills"><h2>Skills</h2></div>
-        <div class="projects"><h2>Highlighted projects</h2></div>
-        <div class="contact"><h2>Contact me</h2></div>
-    </body>
+        <body>
+            <h1>Brij Patel</h1>
+
+            <h2>About me</h2>
+            <div class="about"></div>
+
+            <h2>Skills</h2>
+            <div class="skills"></div>
+
+            <h2>Highlighted projects</h2>
+            <div class="projects">
+                <!-- Problem Statement Assignment -->
+                <section class="project">
+                    <a href="files/statement.pdf">
+                        <h3>Problem Statement</h3>
+                    </a>
+                    <a href="files/problem_statement.pdf">
+                        <img src="images/Computing_problem.png">
+                    </a>
+                    <p>While there are many ways to help college students overcome their mental health issues, they still suffer from it. 
+                    </p>
+                </section>  
+            </div>
+
+                
+            <h2>Contact me</h2>
+            <div class="contact"></div>
+
+        </body>
 </html>
