--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="projects">
                 <!-- Problem Statement Assignment -->
                 <section class="project">
-                    <a href="files/statement.pdf">
+                    <a href="files/problem_statement.pdf">
                         <h3>Problem Statement</h3>
                     </a>
                     <a href="files/problem_statement.pdf">
