--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
                 </section>  
             </div>
 
+                <!--Affinity Diagram Assignment -->
+                <section class="project">
+                    <a href="files/Affinity_Diagram.pdf">
+                        <h3>Affinity Diagram</h3>
+                    </a>
+                    <a href="files/Affinity_Diagram.pdf">
+                        <img src="images/Affinity_Diagram.png">
+                    </a>
+                    <p>This organizes ideas for our mental health platform to help us plan a solution that meets user needs and deals with any challenges.
+                    </p>
+                </section>
+
                 
             <h2>Contact me</h2>
             <div class="contact"></div>
