--- a/index.html
+++ b/index.html
@@ -40,6 +40,19 @@
                     </p>
                 </section>
 
+
+                <!--Sketches Assignment-->
+                <section class="project">
+                    <a href="files/Sketches.pdf">
+                        <h3>Affinity Diagram</h3> 
+                    </a>
+                    <a href="files/Sketches.pdf">
+                        <img src="images/Sketches.jpg">
+                    </a>
+                    <p>This sketch shows that app's design across phone, website, and smartwatch, with a simple layout for each.
+                    </p>
+                </section>
+
                 
             <h2>Contact me</h2>
             <div class="contact"></div>
