--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <!--Sketches Assignment-->
                 <section class="project">
                     <a href="files/Sketches.pdf">
-                        <h3>Affinity Diagram</h3> 
+                        <h3>Sketches</h3> 
                     </a>
                     <a href="files/Sketches.pdf">
                         <img src="images/Sketches.jpg">
