--- a/index.html
+++ b/index.html
@@ -53,6 +53,19 @@
                     </p>
                 </section>
 
+
+                <!--Paper Prototype Assignment-->
+                <section class="project">
+                    <a href="https://www.youtube.com/watch?v=I25arII6Ljo">
+                        <h3> Prototype</h3>
+                    </a>
+                    <a href="https://www.youtube.com/watch?v=I25arII6Ljo">
+                        <img src="images/Prototype.jpg">
+                    </a>
+                    <p> This paper prototype shows how a user will work the app, including all of its features. 
+                    </p>
+                </section>
+
                 
             <h2>Contact me</h2>
             <div class="contact"></div>
