--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
             <h1>Brij Patel</h1>
 
             <h2>About me</h2>
-            <div class="about"></div>
+            <div class="about">
+                <h2> About Me </h2>
+                <div class = "about">
+                    <img src="images/profile_pic.jpg">
+                    <p>
+                        Hello! My name is Brij Patel. I am a student at the University of South Carolina studying Computer Engineering. I am eager to learn about and to expand my skills with coding. My goal is to work at a major tech/gaming corporation and to help design artificial intelligence.  
+                    </p>
+                </div>
+            </div>
 
             <h2>Skills</h2>
             <div class="skills"></div>
