--- a/index.html
+++ b/index.html
@@ -4,79 +4,84 @@
         <title>CSCE 190: Brij Patel</title>
         <link rel="stylesheet" href="styles.css" />
     </head>
-        <body>
-            <h1>Brij Patel</h1>
+    <body>
+        <h1>Brij Patel</h1>
 
-            <h2>About me</h2>
-            <div class="about">
-                <h2> About Me </h2>
-                <div class = "about">
-                    <img src="images/profile_pic.jpg">
-                    <p>
-                        Hello! My name is Brij Patel. I am a student at the University of South Carolina studying Computer Engineering. I am eager to learn about and to expand my skills with coding. My goal is to work at a major tech/gaming corporation and to help design artificial intelligence.  
-                    </p>
-                </div>
-            </div>
+        <h2>About Me</h2>
+        <div class="about">
+            <img src="images/profile_pic.jpg" alt="Profile picture of Brij Patel" />
+            <p>
+                Hello! My name is Brij Patel. I am a student at the University of South Carolina studying Computer Engineering. 
+                I am eager to learn about and to expand my skills with coding. My goal is to work at a major tech/gaming corporation 
+                and to help design artificial intelligence.
+            </p>
+        </div>
 
-            <h2>Skills</h2>
-            <div class="skills"></div>
+        <h2>Skills</h2>
+        <div class="skills">
+            <p>
+                <b>Resume:</b>
+                <a href="files/Resume.pdf">Download here</a>
+            </p>
+        </div>
 
-            <h2>Highlighted projects</h2>
-            <div class="projects">
-                <!-- Problem Statement Assignment -->
-                <section class="project">
-                    <a href="files/problem_statement.pdf">
-                        <h3>Problem Statement</h3>
-                    </a>
-                    <a href="files/problem_statement.pdf">
-                        <img src="images/Computing_problem.png">
-                    </a>
-                    <p>While there are many ways to help college students overcome their mental health issues, they still suffer from it. 
-                    </p>
-                </section>  
-            </div>
+        <h2>Highlighted Projects</h2>
+        <div class="projects">
+            <!-- Problem Statement Assignment -->
+            <section class="project">
+                <a href="files/problem_statement.pdf">
+                    <h3>Problem Statement</h3>
+                </a>
+                <a href="files/problem_statement.pdf">
+                    <img src="images/Computing_problem.png" alt="Problem Statement Thumbnail" />
+                </a>
+                <p>
+                    While there are many ways to help college students overcome their mental health issues, they still suffer from it.
+                </p>
+            </section>
 
-                <!--Affinity Diagram Assignment -->
-                <section class="project">
-                    <a href="files/Affinity_Diagram.pdf">
-                        <h3>Affinity Diagram</h3>
-                    </a>
-                    <a href="files/Affinity_Diagram.pdf">
-                        <img src="images/Affinity_Diagram.png">
-                    </a>
-                    <p>This organizes ideas for our mental health platform to help us plan a solution that meets user needs and deals with any challenges.
-                    </p>
-                </section>
+            <!-- Affinity Diagram Assignment -->
+            <section class="project">
+                <a href="files/Affinity_Diagram.pdf">
+                    <h3>Affinity Diagram</h3>
+                </a>
+                <a href="files/Affinity_Diagram.pdf">
+                    <img src="images/Affinity_Diagram.png" alt="Affinity Diagram Thumbnail" />
+                </a>
+                <p>
+                    This organizes ideas for our mental health platform to help us plan a solution that meets user needs and 
+                    deals with any challenges.
+                </p>
+            </section>
 
+            <!-- Sketches Assignment -->
+            <section class="project">
+                <a href="files/Sketches.pdf">
+                    <h3>Sketches</h3>
+                </a>
+                <a href="files/Sketches.pdf">
+                    <img src="images/Sketches.jpg" alt="Sketches Thumbnail" />
+                </a>
+                <p>
+                    This sketch shows the app's design across phone, website, and smartwatch, with a simple layout for each.
+                </p>
+            </section>
 
-                <!--Sketches Assignment-->
-                <section class="project">
-                    <a href="files/Sketches.pdf">
-                        <h3>Sketches</h3> 
-                    </a>
-                    <a href="files/Sketches.pdf">
-                        <img src="images/Sketches.jpg">
-                    </a>
-                    <p>This sketch shows that app's design across phone, website, and smartwatch, with a simple layout for each.
-                    </p>
-                </section>
+            <!-- Paper Prototype Assignment -->
+            <section class="project">
+                <a href="https://www.youtube.com/watch?v=I25arII6Ljo">
+                    <h3>Prototype</h3>
+                </a>
+                <a href="https://www.youtube.com/watch?v=I25arII6Ljo">
+                    <img src="images/Prototype.jpg" alt="Prototype Thumbnail" />
+                </a>
+                <p>
+                    This paper prototype shows how a user will work the app, including all of its features.
+                </p>
+            </section>
+        </div>
 
-
-                <!--Paper Prototype Assignment-->
-                <section class="project">
-                    <a href="https://www.youtube.com/watch?v=I25arII6Ljo">
-                        <h3> Prototype</h3>
-                    </a>
-                    <a href="https://www.youtube.com/watch?v=I25arII6Ljo">
-                        <img src="images/Prototype.jpg">
-                    </a>
-                    <p> This paper prototype shows how a user will work the app, including all of its features. 
-                    </p>
-                </section>
-
-                
-            <h2>Contact me</h2>
-            <div class="contact"></div>
-
-        </body>
+        <h2>Contact Me</h2>
+        <div class="contact"></div>
+    </body>
 </html>
