--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <h3>Java code of CSCE 145</h3>
                 </a>
                 <a href="https://github.com/brijp206/CSCEcode">
-                    <img src="images/matrix.png.webp"> 
+                    <img src="images/matrix.png"> 
                 </a>
                     <p>Java projects over the course CSCE 145
                     </p>
