--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <h2>Skills</h2>
         <div class="skills">
-            <p>
+            <p class="resume-link">
                 <b>Resume:</b>
                 <a href="files/Resume.pdf">Download here</a>
             </p>
@@ -97,6 +97,20 @@
         </div>
 
         <h2>Contact Me</h2>
-        <div class="contact"></div>
+        <div class="contact">
+            <p>Email: 
+                <a href="mailto:brijpatel624@gmail.com">brijpatel624@gmail.com
+                </a>
+            </p>
+             <p>LinkedIn: 
+                <a href="https://www.linkedin.com/in/brij-patel-861647331" target="_blank">linkedin.com/in/brij-patel-861647331
+                </a>
+            </p>
+            <p>GitHub: 
+                <a href="https://github.com/brijp206" target="_blank">github.com/brijp206
+
+                </a>
+            </p>
+        </div>
     </body>
 </html>
