--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
 
         <h2>About Me</h2>
         <div class="about">
-            <img src="images/profile_pic.jpg" alt="Profile picture of Brij Patel" />
+            <img src="images/Profilephoto.jpg" alt="Profile picture of Brij Patel" />
             <p>
-                Hello! My name is Brij Patel. I am a student at the University of South Carolina studying Computer Engineering. 
-                I am eager to learn about and to expand my skills with coding. My goal is to work at a major tech/gaming corporation 
-                and to help design artificial intelligence.
+                Hello! My name is Brij Patel. I’m a sophomore Computer Engineering student at the University of South Carolina with a passion for technology, innovation, and problem-solving. I’m especially interested in areas like software development, embedded systems, and artificial intelligence. Outside of class, I’m always looking for opportunities to learn new programming languages, collaborate on tech projects, and grow as an engineer.
             </p>
         </div>
 
@@ -21,7 +19,7 @@
         <div class="skills">
             <p class="resume-link">
                 <b>Resume:</b>
-                <a href="files/Resume.pdf">Download here</a>
+                <a href="files/Resume.docx">Download here</a>
             </p>
         </div>
 
